--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".StatsActivity" android:parentActivityName=".MainActivity">
+
+        </activity>
         <activity android:name=".MainActivity">
 
             <intent-filter>
