--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.multiplicationtablequiz">
 
     <application
@@ -8,10 +9,16 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".activity.StatsActivity" android:parentActivityName=".activity.MainActivity">
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
+        <activity
+            android:name=".activity.StatsActivity"
+            android:parentActivityName=".activity.MainActivity" />
 
-        </activity>
+        <activity
+            android:name=".activity.NumberSelectActivity"
+            android:parentActivityName=".activity.MainActivity" />
+
         <activity android:name=".activity.MainActivity">
 
             <intent-filter>
